--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="blue">#5D9CEC</color>
     <color name="blue_dark">#335B8E</color>
     <color name="green">#61E757</color>
+    <color name="red">#F44336</color>
 </resources>
